--- a/src/assets/layout/_main.scss
+++ b/src/assets/layout/_main.scss
@@ -95,3 +95,7 @@ background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
 // .layout-main-container5 {
 //     margin-bottom: 1rem;
 // }
+.myStats2 {
+    width: 90% !important;
+    margin-left: 5% !important;
+}
