--- a/src/assets/layout/_responsive.scss
+++ b/src/assets/layout/_responsive.scss
@@ -161,9 +161,4 @@
     }
 }
 
-@media screen and (min-width: 1450px) {
-    .myStats2 {
-        width: 90% !important;
-        margin-left: 5% !important;
-    }
-}
+
